--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "findmovies-app",
   "private": true,
+  "homepage": "FindMovies-app/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
